welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: '(' expected but identifier found.
    if !((a<=19 || a>= 13) && (b<=19 && b>=13)) {return true}
       ^loneTeen:4: error: illegal start of simple expression
  }
  ^